--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ZeroNote.NoActionBar">
+            android:theme="@style/Theme.ZeroNote.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,12 +26,8 @@
 
         <activity
             android:name=".activities.NoteActivity"
-            android:label="@string/title_activity_note">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+            android:label="@string/title_activity_note"
+            android:windowSoftInputMode="adjustResize">
         </activity>
 
     </application>
